--- a/eo/main.lang
+++ b/eo/main.lang
@@ -215,7 +215,7 @@ Oftaj demandoj
 
 
 ;Videos
-Videoj
+Filmetoj
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
@@ -319,7 +319,7 @@ Kontroli la novan aspekton de Firefox.
 
 
 ;Browse the future of the Web.
-Ekzameni la estonton de la TTT.
+Esplori la estonton de la TTT.
 
 
 ;See Firefox with a new look and feel.
@@ -408,11 +408,11 @@ Subtenataj aparatoj
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Novaĵoj
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privateco
 
 
