l10n: fix nbsp in marketplace page
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109180 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/en-GB/marketplace/partners.lang
+++ b/en-GB/marketplace/partners.lang
@@ -20,8 +20,8 @@ Mozilla is bringing its core values — openness, freedom, user choice — to th
 This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
-;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Learn all about creating HTML5 apps at the Mozilla Developer Network »
+;Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
+Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
 
 
 ;The Mozilla apps platform
@@ -36,8 +36,8 @@ Mozilla Marketplace
 Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
 
 
-;Submit your app »
-Submit your app »
+;Submit your app&nbsp;»
+Submit your app&nbsp;»
 
 
 ;Launch your app on the Web
