--- a/es-AR/marketplace/partners.lang
+++ b/es-AR/marketplace/partners.lang
@@ -20,8 +20,8 @@ Mozilla está llevando sus valores principales — apertura, libertad, elección
 Para ver este video tenés que usar un navegador que reproduzca videos abiertos o <a href="http://www.adobe.com/go/getflashplayer">el reproductor de Adobe Flash</a>.
 
 
-;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Aprende todo acerca de cómo crear aplicaciones en HTML5 en Mozilla Developer Network »
+;Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
+Aprende todo acerca de cómo crear aplicaciones en HTML5 en Mozilla Developer Network&nbsp;»
 
 
 ;The Mozilla apps platform
@@ -36,8 +36,8 @@ Mozilla Marketplace
 Crear aplicaciones para la Web permite a los desarrolladores tener el control total sobre el contenido, funcionalidad y cómo son distribuidas las aplicaciones, incluyendo el acceso a cientos de millones de usuarios de Firefox a través del Mozilla Marketplace.
 
 
-;Submit your app »
-Enviá tu aplicación »
+;Submit your app&nbsp;»
+Enviá tu aplicación&nbsp;»
 
 
 ;Launch your app on the Web
