--- a/es-ES/marketplace/partners.lang
+++ b/es-ES/marketplace/partners.lang
@@ -20,8 +20,8 @@ Mozilla aporta sus valores fundamentales al mundo de las aplicaciones: apertura,
 Este video requiere un navegador compatible con un video abierto o <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
-;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Descubre todo lo que hay que saber para crear aplicaciones HTML5 en Mozilla Developer Network »
+;Learn all about creating HTML5 apps at the Mozilla Developer Network&nbsp;»
+Descubre todo lo que hay que saber para crear aplicaciones HTML5 en Mozilla Developer Network&nbsp;»
 
 
 ;The Mozilla apps platform
@@ -36,8 +36,8 @@ Marketplace de Mozilla
 La creación de aplicaciones para la Web ofrece a los desarrolladores un control total sobre su contenido, sus funcionalidades y su distribución, además de la posibilidad de tener acceso a cientos de millones de usuarios de Firefox a través del Marketplace de Mozilla.
 
 
-;Submit your app »
-Enviar tu aplicación »
+;Submit your app&nbsp;»
+Enviar tu aplicación&nbsp;»
 
 
 ;Launch your app on the Web
