l10n: fix encoding issue in ku file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109293 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ku/firefoxtesting.lang
+++ b/ku/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Firefox betayê ji bo Androîdê daxe - Belaş e
+Firefox betayÃª ji bo AndroÃ®dÃª daxe - BelaÃ¾ e
 
 
 ;Download Firefox Beta for Desktop - Free
-Firefox Betayê ji bo Sermaseyê daxe - belaş e
+Firefox BetayÃª ji bo SermaseyÃª daxe - belaÃ¾ e
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Daxde û guhertoya siberojê biceribîne. Bi Aurora an jî Betayê guhertinên herî nû biceribîne.
+Daxde Ã» guhertoya siberojÃª biceribÃ®ne. Bi Aurora an jÃ® BetayÃª guhertinÃªn herÃ® nÃ» biceribÃ®ne.
 
 
 ;Firefox Beta
@@ -22,38 +22,38 @@ Firefox Beta bo:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta bo Mobîlê
+Firefox Beta bo MobÃ®lÃª
 
 
 ;Download Beta and be part of the next version of Firefox.
-Betayê daxe û bibe parçeyeke guhertoya nû ya Firefoxê.
+BetayÃª daxe Ã» bibe parÃ§eyeke guhertoya nÃ» ya FirefoxÃª.
 
 
 ;1. Test Features
-1. taybetiyên testê
+1. taybetiyÃªn testÃª
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Performans, takekeskirin û pêşketinên ewlekariyê ku êdî amade ne, biceribîne.
+Performans, takekeskirin Ã» pÃªÃ¾ketinÃªn ewlekariyÃª ku ÃªdÃ® amade ne, biceribÃ®ne.
 
 
 ;2. Refine &amp; Polish
-2. Ciwankarî
+2. CiwankarÃ®
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-Ji bo guhertoyeke hevgirtî û ciwan û performanseke baş bi bugên xwe beşdarî handanê bibin.
+Ji bo guhertoyeke hevgirtÃ® Ã» ciwan Ã» performanseke baÃ¾ bi bugÃªn xwe beÃ¾darÃ® handanÃª bibin.
 
 
 ;3. Do Your Part
-3. Bandorkarî
+3. BandorkarÃ®
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Li ser guhertoya nû ya Firefoxê û bi mîlyonan bikarhênerên ku her roj Firefoxê bi kar tînin, bandorê çêke.
+Li ser guhertoya nÃ» ya FirefoxÃª Ã» bi mÃ®lyonan bikarhÃªnerÃªn ku her roj FirefoxÃª bi kar tÃ®nin, bandorÃª Ã§Ãªke.
 
 
 ;Supported devices
-Cîhazên piştgiriyê
+CÃ®hazÃªn piÃ¾tgiriyÃª
 
 
