l10n: add missing footer/header strings used on bedrock template
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109294 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/main.lang
+++ b/ach/main.lang
@@ -159,7 +159,7 @@ Myero i <a href="http://get.adobe.com/flashplayer/"> Ngec pa Latuku me Adober</a
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.  
+Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.
 
 
 ;Features
@@ -414,3 +414,20 @@ Ngo Manyen
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 I mung pa dano
+
+
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
+
+
