--- a/ff/main.lang
+++ b/ff/main.lang
@@ -414,3 +414,20 @@ Ko Hesɗi e Firefox
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 Suturo
+
+
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
+
+
