--- a/zh-TW/main.lang
+++ b/zh-TW/main.lang
@@ -410,8 +410,24 @@ Mozilla Firefox，讓您可以在 XP 當中體驗最新網頁技術。
 ;What’s New
 新鮮事
 
+
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 隱私權
+
+
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
 
 
