--- a/en-GB/main.lang
+++ b/en-GB/main.lang
@@ -414,3 +414,18 @@ What’s New
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 Privacy
+
+
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
