--- a/fy-NL/main.lang
+++ b/fy-NL/main.lang
@@ -1,4 +1,4 @@
-﻿;Navigation
+;Navigation
 Navigaasje
 
 
@@ -414,5 +414,20 @@ Wat is nij
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 Privacy {ok}
+
+
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
 
 
