--- a/ko/main.lang
+++ b/ko/main.lang
@@ -416,3 +416,18 @@ Mozilla Firefox. 윈도 XP에서도 최신 웹 기술을 제공합니다.
 개인 정보 정책
 
 
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
+
+
