--- a/si/main.lang
+++ b/si/main.lang
@@ -416,3 +416,18 @@ Android Market වෙතින් නොමිලේ
 පුද්ගලිකත්වය
 
 
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
+
+
