--- a/zh-CN/main.lang
+++ b/zh-CN/main.lang
@@ -416,3 +416,18 @@ Mozilla Firefox. 为 XP 带来最新的网络体验。
 隐私
 
 
+# Footer string
+;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+
+
+# Footer string
+;Contribute to this page
+Contribute to this page
+
+
+# Top menu item
+;Mission
+Mission
+
+
