--- a/de/main.lang
+++ b/de/main.lang
@@ -418,12 +418,12 @@ Datenschutz
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Teile dieses Inhalts stehen unter einem ©1998–%(current_year)s von einzelnen Mitwirkenden an mozilla.org. Der Inhalt steht unter einer <a href="%(url)s">Creative-Commons-Lizenz</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Zu dieser Seite beitragen
 
 
 # Top menu item
