l10n: sv-SE, main.lang strings update, translation by  Mikael Hiort af Ornäs
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109301 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/main.lang
+++ b/sv-SE/main.lang
@@ -418,16 +418,16 @@ Sekretess
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Upphovsrätten för delar av detta innehåll tillhör enskilda medarbetare på mozilla.org – ©1998–%(current_year)s. Innehållet är tillgängligt under en <a href="%(url)s">Creative Commons-licens</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Bidra till den här sidan
 
 
 # Top menu item
 ;Mission
-Mission
+Mission {ok}
 
 
