Localize missing footer/header strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109304 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/main.lang
+++ b/nl/main.lang
@@ -418,16 +418,14 @@ Privacy {ok}
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Delen van deze inhoud zijn ©1998–%(current_year)s bij individuele mozilla.org-medewerkers. Inhoud is beschikbaar onder een <a href="%(url)s">Creative Commons-licentie</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Bijdragen aan deze pagina
 
 
 # Top menu item
 ;Mission
-Mission
-
-
+Missie
