--- a/ga-IE/main.lang
+++ b/ga-IE/main.lang
@@ -408,26 +408,26 @@ Gléasanna a dtacaítear leo
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Is Geal Gach Nua
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Príobháideachas
 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Cóipcheart ©1998–%(current_year)s Rannpháirtithe Mhozilla. Tá an t-ábhar seo ar fáil de réir téarmaí <a href="%(url)s">Cheadúnas Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Cuir feabhas ar an leathanach seo
 
 
 # Top menu item
 ;Mission
-Mission
+Misean
 
 
