--- a/ga-IE/mobile.lang
+++ b/ga-IE/mobile.lang
@@ -131,6 +131,6 @@ Féach ar na cainéil go léir do Firefox Soghluaiste »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Saor in aisce ó Shiopa Google Play
 
 
