--- a/ga-IE/whatsnew.lang
+++ b/ga-IE/whatsnew.lang
@@ -58,42 +58,42 @@ Tacaigh le Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>. {ok}
+Tagann an Róbat Android ó obair a bhí cruthaithe agus <a href="%s">curtha ar fáil ag Google</a>, de réir na dtéarmaí sa cheadúnas <a href="%s">Creative Commons 3.0 Attribution</a>.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Faigh Firefox ar Android</a> agus cuir cumhacht an Ghréasáin i do lámha. Tá sé sciobtha, stuama, sábháilte!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Anois, beir leat é agus beir bua
 
 
 ;Firefox Features
-Firefox Features
+Gnéithe Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Fáilte go Firefox
 
 
 ;Firefox Help
-Firefox Help
+Cabhair le Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Ealaín: Firefox ar Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Sciobtha. Stuama. Sábháilte.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Beir leat é agus beir bua
 
 
