--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -130,19 +130,19 @@ Tá gnéithe nua i bhFirefox a chabhróidh leat cromadh ar thascanna nua níos s
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+An dtaitníonn Firefox Béite leat? <a href="%s">Tabhair cuireadh do do chuid cairde</a> réamhamharc a fháil ar an chéad Firefox eile.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Úsáidim Firefox Béite chun réamhamharc a fháil ar na gnéithe is déanaí a bheidh i bhFirefox go luath. <a href="%s">Bain triail as</a>!
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Go raibh maith agat as Firefox Béite a úsáid chun feabhas a chur ar Firefox. Anois, <a href="%s">tabhair cuireadh</a> do do chuid cairde.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Úsáidim Firefox Béite chun tástáil a dhéanamh ar na gnéithe is déanaí agus Firefox a fheabhsú. <a href="%s">Bain triail as</a>!
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
