--- a/zh-TW/main.lang
+++ b/zh-TW/main.lang
@@ -418,16 +418,16 @@ Mozilla Firefox，讓您可以在 XP 當中體驗最新網頁技術。
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+本頁的部分內容著作權為 ©1998–%(current_year)s 由個別 mozilla.org 貢獻者所有，使用 <a href="%(url)s">創用 CC 授權條款</a> 進行授權。
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+貢獻此頁面
 
 
 # Top menu item
 ;Mission
-Mission
+使命
 
 
