--- a/it/main.lang
+++ b/it/main.lang
@@ -418,16 +418,16 @@ Privacy {ok}
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Parte di questi contenuti sono ©1998–%(current_year)s di singoli collaboratori di mozilla.org. I contenuti sono disponibili secondo la <a href="%(url)s">licenza Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Collabora a questa pagina
 
 
 # Top menu item
 ;Mission
-Mission
+Missione
 
 
