--- a/eo/main.lang
+++ b/eo/main.lang
@@ -418,16 +418,16 @@ Privateco
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Partoj de tiu ĉi enhavo estas ©1998–%(current_year) kopirajtitaj de individuaj kontribuantoj de  mozilla.org. La enhavo estas disponebla laŭ la kondiĉoj de <a href="%(url)s">permesilo de Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Kontribuu al tiu ĉi paĝo
 
 
 # Top menu item
 ;Mission
-Mission
+Celo
 
 
