--- a/sk/main.lang
+++ b/sk/main.lang
@@ -418,16 +418,16 @@ Súkromie
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Časť tohto obsahu bola v rokoch ©1998–%(current_year)s vytvorená individuálnymi prispievateľmi mozilla.org. Obsah je dostupný pod licenciou <a href="%(url)s">Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Prispieť k obsahu stránky
 
 
 # Top menu item
 ;Mission
-Mission
+Misia
 
 
