--- a/rm/main.lang
+++ b/rm/main.lang
@@ -418,16 +418,16 @@ Sfera privata
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Parts dal cuntegn èn ©1998–%(current_year)s da divers contribuents a mozilla.org. Il cuntegn stat a disposiziun tenor la <a href="%(url)s">licenza da Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Contribuir a questa pagina
 
 
 # Top menu item
 ;Mission
-Mission
+Missiun
 
 
