Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109370 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/main.lang
+++ b/hu/main.lang
@@ -418,16 +418,16 @@ Adatvédelem
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+A tartalom egy részét ©1998–%(current_year)s mozilla.org közreműködők készítették. A tartalom <a href="%(url)s">Creative Commons licenc</a> alatt érhető el.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Legyen közreműködő
 
 
 # Top menu item
 ;Mission
-Mission
+Küldetés
 
 
