--- a/et/main.lang
+++ b/et/main.lang
@@ -418,16 +418,16 @@ Privaatsusest
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Osa sisu autoriõigused kuuluvad 1998–%(current_year)s mozilla.org kaastöötajatele. Sisu on avaldatud a <a href="%(url)s">Creative Commonsi litsentsi</a> all.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Löö kaasa selle lehe tegemisel
 
 
 # Top menu item
 ;Mission
-Mission
+Missioon
 
 
