[id] updated newsletter.lang based on bennychandra comment
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109388 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/id/newsletter.lang
+++ b/id/newsletter.lang
@@ -6,7 +6,7 @@ Dapatkan Berita Bulanan
 
 
 ;Your Email Address
-Alamat Email Anda
+Alamat Surel Anda
 
 
 ;Text
@@ -22,7 +22,7 @@ Pilih Negara
 
 
 ;Whoops! Be sure to enter a valid email address.
-Duh, pastikan memasukkan alamat email yang benar ya!
+Duh, pastikan memasukkan alamat surel yang benar ya!
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -50,11 +50,11 @@ Kami berharap untuk secepatnya dapat berbagi kiat tentang ber-Firefox-ria, kabar
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Langgan berita bulanan tentang kabar terbaru dari Mozilla, termasuk kiat untuk mendapatkan manfaat sebesar-besarnya dari peramban Firefox Anda. Cara tepat untuk selalu mendapat kabar Firefox terhangat!
+Langgan berita bulanan tentang kabar terbaru dari Mozilla, termasuk kiat untuk mendapatkan manfaat sebesar-besarnya dari peramban Firefox Anda. Cara tepat untuk selalu mendapat kabar Mozilla terhangat!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Kami baru saja mengirim pesan konfirmasi lewat email. Klik tautan konfirmasi pada email tersebut untuk mengonfirmasi langganan Anda ke milis ini.
+Kami baru saja mengirim pesan konfirmasi lewat surel. Klik tautan konfirmasi pada surel tersebut untuk mengonfirmasi langganan Anda ke milis ini.
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -126,11 +126,11 @@ Berhenti Berlangganan
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Centang di sini jika tidak ingin lagi menerima semua email dari Mozilla
+Centang di sini jika tidak ingin lagi menerima semua surel dari Mozilla
 
 
 ;Remove me from all Mozilla emails
-Hapus email saya dari semua email Mozilla
+Hapus alamat saya dari semua langganan surel Mozilla
 
 
 ;Save Preferences
@@ -150,7 +150,7 @@ Sayang sekali Anda pergi. Sudikah menjawab beberapa pertanyaan kami sebelum meng
 
 
 ;You send too many emails.
-Kiriman emailnya terlalu banyak.
+Kiriman surelnya terlalu banyak.
 
 
 ;Your content wasn't relevant to me.
@@ -158,7 +158,7 @@ Kontennya tidak penting.
 
 
 ;Your email design was too hard to read.
-Desain emailnya terlalu susah untuk dibaca.
+Desain surelnya terlalu susah untuk dibaca.
 
 
 ;I didn't sign up for this.
@@ -182,14 +182,14 @@ Nawala Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Terima kasih! Silakan periksa email masuk Anda tentang konfirmasi langganan kami.
+Terima kasih! Silakan periksa surel konfirmasi langganan kami di kotak masuk Anda.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-Anda akan menerima email dari mozilla@e.mozilla.org yang ditujukan untuk mengonfirmasikan langganan Anda. Jika emailnya tidak terlihat, periksa folder spam juga. Anda harus mengonfirmasikan langganan sebelum dapat menerima nawala kami.
+Anda akan menerima surel dari mozilla@e.mozilla.org yang ditujukan untuk mengonfirmasikan langganan Anda. Jika surelnya tidak ditemukan, mohon periksa folder spam juga. Anda harus mengonfirmasikan langganan sebelum dapat menerima nawala kami.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Pastikan menambahkan alamat email pengirim dari kami: mozilla@e.mozilla.org ke buku alamat Anda agar emailnya dapat langsung masuk ke kotak masuk.
+Pastikan menambahkan alamat surel kami: mozilla@e.mozilla.org ke buku alamat Anda agar surelnya dapat langsung masuk ke kotak masuk.
 
 
