[id] updated main.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109389 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/id/main.lang
+++ b/id/main.lang
@@ -367,7 +367,7 @@ Email {ok}
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Web yang modern, juga untuk XP.
+Mozilla Firefox. Web nan modern, juga untuk XP.
 
 
 ;Super speed
@@ -375,7 +375,7 @@ Kecepatan tinggi
 
 
 ;Stunning graphics
-Grafik nan mempesona
+Grafik nan memesona
 
 
 ;The latest technologies
@@ -403,31 +403,31 @@ Perbarui sekarang
 
 
 ;Supported Devices
-Supported devices
+Perangkat yang Didukung
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Yang Baru
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privasi
 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Hak cipta ©1998–%(current_year)s oleh kontributor individual mozilla.org untuk bagian konten ini. Konten tersedia di bawah <a href="%(url)s">lisensi Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Berkontribusi ke laman ini
 
 
 # Top menu item
 ;Mission
-Mission
+Misi
 
 
