[es-ES] main.lang localization updated
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109392 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/main.lang
+++ b/es-ES/main.lang
@@ -211,7 +211,7 @@ Megabytes {ok}
 
 
 ;FAQ
-FAQ
+FAQ {ok}
 
 
 ;Videos
@@ -291,7 +291,7 @@ Viaje al futuro con Firefox
 
 
 ;Join the Beta Program
-Únete al programa beta
+Únete al programa Beta
 
 
 ;Experience Firefox
@@ -418,16 +418,16 @@ Privacidad
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Algunos contenidos están protegidos por los derechos de autor ©1998–%(current_year)s de determinados colaboradores en mozilla.org. El resto del contenido está disponible bajo una licencia <a href="%(url)s">Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Colabora en esta página
 
 
 # Top menu item
 ;Mission
-Mission
+Misión
 
 
