l10n: main.lang update, translation by Novica Nakov
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109415 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mk/main.lang
+++ b/mk/main.lang
@@ -418,16 +418,16 @@ Mozilla Firefox ја носи модерната мрежа на XP.
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Делови од оваа содржина се ©1998–%(current_year)s од поединци кои придонеле на mozilla.org. Содржината е достапна под <a href="%(url)s">лиценца на Криејтив комонс</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Придонеси на оваа страница
 
 
 # Top menu item
 ;Mission
-Mission
+Мисија
 
 
