l10n: translation update by Oksana
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109416 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -50,7 +50,7 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Подпишитесь на ежемесячные обновления и будьте в курсе новостей Mozilla, а также последних советов и секретов, позволяющих использовать ваш Firefox по максимуму. Это идеальный способ для нас оставаться на связи!
+Подпишитесь на ежемесячную рассылку и будьте в курсе новостей Mozilla, а также последних советов и секретов, позволяющих использовать ваш Firefox по максимуму. Это идеальный способ для нас оставаться на связи!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
@@ -58,7 +58,7 @@
 
 
 ;Read all about it in our <span>newsletter</span>
-Прочтите всё об этом в нашем <span>письме с новостями</span>
+Узнайте все новости из <span>нашей подписки</span>
 
 
 ;Your newsletter subscription has been confirmed.
