--- a/sq/main.lang
+++ b/sq/main.lang
@@ -418,16 +418,16 @@ Privatësi
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Pjesë të kësaj lënde janë nën të drejta kopjimi sipas ©1998–%(current_year)s nga kontribues individualë te mozilla.org. Lëndë e passhme sipas një <a href="%(url)s">lejeje Creative Commons</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Kontribuoni te kjo faqe
 
 
 # Top menu item
 ;Mission
-Mission
+Mision
 
 
