--- a/he/mozorg/contribute.lang
+++ b/he/mozorg/contribute.lang
@@ -43,7 +43,7 @@
 
 
 ;Send us a note and we can get you started right away.
-שלחו אלינו הודעה ואנו 
+שלחו אלינו הודעה ואנו נעזור לכם להתחיל מיד.
 
 
 ;Hi, I’m interested in…
