updated latvian translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109468 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lv/main.lang
+++ b/lv/main.lang
@@ -408,26 +408,26 @@ Atbalstītās ierīces
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Kas jauns?
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privātums
 
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Daļai no šī satura ©1998–%(current_year)s pieder individuāliem mozilla.org biedriem. Saturs pieejams ar <a href="%(url)s">Creative Commons licenci</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Papildini šo lapu
 
 
 # Top menu item
 ;Mission
-Mission
+Misija
 
 
