--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -130,18 +130,18 @@ Firefox jaunās iespējas palīdz katru nākamo darbu paveikt ātrāk! <a href="
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Fano par Firefox Beta? <a href="%s">Uzaicini draugus</a> ielūkoties Firefox nākotnes versijā.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Es izmantoju Firefox Beta, lai pirms citiem redzētu jaunākās Firefox iespējas un izgudrojumus. <a href="%s">Pamēģini arī Tu</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Paldies, ka izmantojat Firefox Beta un palīdzat padarīt Firefox vēl foršāku. Ja vēlaties, varat <a href="%s">uzaicināt draugus</a>, lai arī viņi pamēģina.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Es izmantoju Firefox Beta, lai palīdzētu notestēt jaunākās iespējas un Firefox būtu vēl foršāks. <a href="%s">Pamēģini arī Tu</a>.
 
 
