--- a/lv/whatsnew.lang
+++ b/lv/whatsnew.lang
@@ -62,38 +62,38 @@ Android robots ir izveidots no <a href="%s">Google resursiem</a> un tiek izmanto
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Iegūsti Firefox Android ierīcēm</a> saņem Interneta spēku rokās. Tas ir ātri, gudri un droši!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Iegūsti mobilo pārlūku, kas rūpējas par tevi
 
 
 ;Firefox Features
-Firefox Features
+Firefox iespējas
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Esiet sveicināti Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox palīdzība
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox Android ierīcēm darbībā
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Ātrs. Gudrs. Drošs.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Iegūsti mobilo pārlūku, kas rūpējas par tevi
 
 
