--- a/hr/main.lang
+++ b/hr/main.lang
@@ -418,16 +418,16 @@ Privatnost
 
 # Footer string
 ;Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
-Portions of this content are ©1998–%(current_year)s by individual mozilla.org contributors. Content available under a <a href="%(url)s">Creative Commons license</a>.
+Prava nad dijelovima ovog sadržaja (©1998–%(current_year)s) zadržali su individualni doprinositelji mozilla.org projekta. Sadržaj je dostupan pod <a href="%(url)s">Creative Commons licencom</a>.
 
 
 # Footer string
 ;Contribute to this page
-Contribute to this page
+Doprinesite ovoj stranici
 
 
 # Top menu item
 ;Mission
-Mission
+Misija
 
 
