Translated contribute.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@109475 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hr/mozorg/contribute.lang
+++ b/hr/mozorg/contribute.lang
@@ -1,172 +1,169 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Get Involved: Volunteer Opportunities at Mozilla
+Uključite se: volonterska mjesta u Mozilli
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Ovaj video zahtijeva web preglednik s podrškom za otvoreni video ili <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
+Da biste se uključili, ne trebate biti C++ guru (ili uopće znati što to znači!).<br><b>Samo trebate voljeti Web.</b>
 
 
 ;Please enter a valid email address.
-Please enter a valid email address.
+Upišite adresu svoje e-pošte.
 
 
 ;You must agree to the privacy policy.
-You must agree to the privacy policy.
+Morate se složiti s politikom privatnosti.
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Molim odaberite područje interesa.
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
-
+Recite nam nešto o svojim interesima.
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Vaš CAPTCHA odgovor nije točan. Molim pokušajte ponovno.
 
 
 ;Want to help?
-Want to help?
+Želite li pomoći?
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+ADRESA VAŠE E-POŠTE
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Pošalji&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Pošaljite nam poruku i možemo vas odmah zaposliti.
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+Bok, zanima me…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+Želim primati redovne novosti o doprinosima putem e-pošte
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Hvala što ste nas kontaktirali.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Netko iz Mozille će vam se uskoro javiti s informacijama kako se možete uključiti. Dok čekate, provjerite u nastavku neke od trenutno dostupnih volonterskih pozicija.
 
 
 ;Find an opportunity
-Find an opportunity
-
+Pronađite priliku
 
 ;Sort By:
-Sort By:
+Sortiraj prema:
 
 
 ;Interest
-Interest
+Interesu
 
 
 ;Location
-Location
+Lokaciji
 
 
 ;Newsletter
-Newsletter
+Newsletter {ok}
 
 
 ;Helping Users
-Helping Users
+Pomaganje korisnicima
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
+Jeste li zainteresirani za pomaganje ostalima kako bi mogli izvući maksimum iz Firefoxa i ostalih Mozillinih projekata? Naš proces podrške se oslanja na entuzijastične doprinositelje poput vas.
 
 
 ;Quality Assurance
-Quality Assurance
-
+Osiguranje kvalitete
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
+Testiranje osiguranja kvalitete je jedan od najjednostavnijih načina da se uključite u Mozillu. To je, također, i sjajan način da se upoznate s našim kôdom i alatima.
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Pomognite nam <a href="http://quality.mozilla.org/teams/desktop-firefox/">otkriti greške</a> u Firefoxu, <a href="http://quality.mozilla.org/teams/web-qa/">testirati Mozilline web stranice</a> ili naučiti više o <a href="http://quality.mozilla.org/">ostalim mogućnostima testiranja</a>.
 
 
 ;Coding
-Coding
+Programiranje
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
+<a href="https://developer.mozilla.org/en/Introduction">Programeri mogu pomoći</a> Mozilli dodavanjem novih mogućnosti, unaprijeđivanjem naše tehnologije, te olakšavanjem razvojnog procesa ostalim programerima.
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
+Velik broj programera možete pronaći na <a href="http://irc.mozilla.org">IRC-u</a>, stoga ga posjetite ako imate pitanja ili želite naučiti nešto novo. Naše web stranice su <a href="http://blog.mozilla.com/webdev/get-involved/">otvorene za web nindže</a> koje vole hackirati.
 
 
 ;Spread the Word
-Spread the Word
+Proširite riječ
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
+Pomognite nam proširiti riječ kako Firefox i ostali Mozillini projekti grade bolji Internet. Podijelite Firefox sa svijetom tako da postanete <a href="https://affiliates.mozilla.org">Affiliate član</a>, te zatim provjerite naše <a href="https://wiki.mozilla.org/MarketingGuide">marketinške smjernice</a> da biste saznali na koje se još načine možete uključiti.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Find out about <a href="/contribute/areas.html">more areas of interest…</a>
+Saznajte više o <a href="/contribute/areas.html">ostalim područjima interesa…</a>
 
 
 ;map
-map
+Karta
 
 
 ;US and Canada
-US and Canada
+SAD i Kanada
 
 
 ;Europe
-Europe
+Europa
 
 
 ;Latin America
-Latin America
+Južna Amerika
 
 
 ;Africa and the Middle East
-Africa and the Middle East
+Afrika i Bliski istok
 
 
 ;Asia and the South Pacific
-Asia and the South Pacific
+Azija i Južni Pacifik
 
 
 ;Antarctica
-Antarctica
+Antarktika
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Sign up for a weekly newsletter that is full of community news and contribution opportunities.
+Pretplatite se na naš tjedni newsletter prepun novosti iz zajednica i prilikama za doprinose.
 
 
 ;Thank you!
-Thank you!
+Hvala vam!
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+Također se možete pridružiti našoj <a href="https://support.mozilla.org/army-of-awesome">vojski fenomenalnih</a> na način da pomažete korisnicima na Twitteru.
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+Saznajte više o podršci za korisnike <a href="https://support.mozilla.org/kb/superheroes-wanted">Firefoxa</a> i <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbirda</a>.
 
 
