--- a/he/mozorg/contribute.lang
+++ b/he/mozorg/contribute.lang
@@ -119,7 +119,7 @@
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-aעזרו לנו להפיץ את הבשורה כיצד Firefox ומיזמים אחרים של Mozilla מסייעים בבניית רשת אינטרנט טובה יותר. שתפו את Firefox עם העולם באמצעות <a href="https://affiliates.mozilla.org">הפיכה לשותפים</a> ובדקו את <a href="https://wiki.mozilla.org/MarketingGuide">מדריך השיווק</a> לדרכים נוספות בהם תוכלו להיות מעורבים.
+עזרו לנו להפיץ את הבשורה כיצד Firefox ומיזמים אחרים של Mozilla מסייעים בבניית רשת אינטרנט טובה יותר. שתפו את Firefox עם העולם באמצעות <a href="https://affiliates.mozilla.org">הפיכה לשותפים</a> ובדקו את <a href="https://wiki.mozilla.org/MarketingGuide">מדריך השיווק</a> לדרכים נוספות בהם תוכלו להיות מעורבים.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
